--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p style="color: white; text-transform: uppercase">Page not found</p>
             <a  style="color: white;" href="#">Go to home</a>
         </div>
-        <img src="#" alt="UFO lekste">
+        <img src="ufo.jpg" alt="UFO lekste">
     </main>
 </body>
 </html>
