--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFO</title>
 </head>
-<body style="background-color: #9e78e5;">
-    <main style="display:inline-block; width: 50%; margin-top: 140px; margin-left: 25%;">
-        <div style="width: 35%; float: left; margin-top: 70px;">
-            <h1 style="color: white; margin: 0; font-size: 80px;">404</h1>
-            <p style="color: white; text-transform: uppercase; margin: 0; font-size: 30px; margin-bottom: 20px;">Page not found</p>
+<body style="background-color: #4e78e5;">
+    <main style="display:inline-block; width: 50%; margin-top: 170px; margin-left: 25%;">
+        <div style="width: 35%; float: left; margin-top: 100px;">
+            <h1 style="color: white; margin: 0; font-size: 80px; font-family: fantasy; font-weight: normal;">404</h1>
+            <p style="color: white; text-transform: uppercase; margin: 0; font-size: 36px; margin-bottom: 20px;  font-family: fantasy; font-weight: normal;">Page not found</p>
             <a  style="color: white;" href="#">Go to home</a>
         </div>
         <img src="./IMG/ufo.jpg" alt="UFO lekste" style="width: 60%; float: right;">
