Link and button changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div style="width: 35%; float: left; margin-top: 100px;">
             <h1 style="color: white; margin: 0; font-size: 80px; font-family: fantasy; font-weight: normal;">404</h1>
             <p style="color: white; text-transform: uppercase; margin: 0; font-size: 36px; margin-bottom: 20px;  font-family: fantasy; font-weight: normal;">Page not found</p>
-            <a  style="color: white;" href="#">Go to home</a>
+            <a  style="display:inline-block; color: white; font-family: arial; border: 1px solid white; padding: 10px; padding-left: 30px; padding-right: 30px; border-radius: 21px; text-decoration: none; font-size: 17px" href="#">Go to home</a>
         </div>
-        <img src="./IMG/ufo.jpg" alt="UFO lekste" style="width: 60%; float: right;">
+        <img src="./IMG/ufo.jpg" alt="UFO lekste" style="width: 60%; float: right; font-family: arial">
     </main>
 </body>
 </html>
